Added user onboarding status
