# src/Api/EnterpriseKnowledgeHub.Api/Controllers/MeController.cs
@@ -1,3 +1,5 @@
+using System.Net;
+using EnterpriseKnowledgeHub.Api.Mappers;
 using EnterpriseKnowledgeHub.Contracts.Identity;
 using EnterpriseKnowledgeHub.Modules.Identity.Application.CurrentUser;
 using MediatR;
@@ -13,9 +15,10 @@ public class MeController(IMediator _mediator) : ApiControllerBase()
 {
     [HttpGet]
     [SwaggerOperation(OperationId = "GetMe")]
+    [ProducesResponseType(typeof(CurrentUserResponse), (int)HttpStatusCode.OK)]
     public async Task<IActionResult> Get(CancellationToken cancellationToken)
     {
         var result = await _mediator.Send(new GetCurrentUserQuery(), cancellationToken);
-        return Ok(new MeResponse(result.Id, result.Email, result.Name));
+        return Ok(CurrentUserMapper.MapToCurrentUserResponse(result));
     }
 }
