# src/Modules/Identity/EnterpriseKnowledgeHub.Modules.Identity/Enums/UserOnboardingState.cs
@@ -1,0 +1,9 @@
+﻿namespace EnterpriseKnowledgeHub.Modules.Identity.Enums
+{
+    public enum UserOnboardingState
+    {
+        Complete,
+        CreateOrganization,
+        AcceptInvitation
+    }
+}
