# src/Web/src/services/api/enterprise-knowledge-hub-swagger.json
@@ -26,7 +26,24 @@
         "operationId": "GetMe",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -86,6 +103,35 @@
           }
         },
         "additionalProperties": false
+      },
+      "CurrentUserResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "email": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "onboardingStatus": {
+            "$ref": "#/components/schemas/UserOnboardingStatus"
+          }
+        },
+        "additionalProperties": false
+      },
+      "UserOnboardingStatus": {
+        "enum": [
+          "Complete",
+          "CreateOrganization",
+          "AcceptInvitation"
+        ],
+        "type": "string"
       }
     },
     "securitySchemes": {
